# foundry

./: CLAUDE.md  COMPREHENSIVE_FINAL_SOLUTION.md  Cargo.toml  FINAL_COMPILATION_STATUS.md  FINAL_RESOLUTION_STATUS.md  MULTICHAIN_STATUS.md  ORPHAN_RULE_SOLUTION.md  UPSTREAM_COORDINATION_PLAN.md  deny.toml
crates/anvil/: Cargo.toml  log
crates/anvil/core/: Cargo.toml
crates/anvil/src/: cmd.rs  config.rs  database_adapter.rs  evm.rs  hardfork.rs  lib.rs  orphan_impls.rs
crates/cast/: Cargo.toml
crates/cast/src/: lib.rs
crates/cheatcodes/src/: crypto.rs  error.rs  evm.rs  fs.rs  inspector.rs  json.rs  lib.rs  script.rs  test.rs  utils.rs
crates/chisel/: Cargo.toml
crates/chisel/src/: executor.rs  runner.rs
crates/chisel/tests/: cache.rs
crates/common/: build.rs
crates/common/src/: compile.rs  contracts.rs  evm.rs  transactions.rs
crates/config/src/: invariant.rs  lib.rs  utils.rs
crates/doc/src/: builder.rs  document.rs
crates/evm/abi/: Cargo.toml
crates/evm/core/: Cargo.toml
crates/fmt/src/: comments.rs  formatter.rs
crates/forge/: Cargo.toml  build.rs
crates/forge/src/: args.rs  multi_runner.rs  result.rs  runner.rs
crates/linking/: Cargo.toml
crates/linking/src/: lib.rs
crates/script/: Cargo.toml
crates/script/src/: broadcast.rs  build.rs  execute.rs  lib.rs  runner.rs  sequence.rs  simulate.rs  verify.rs
crates/verify/src/: bytecode.rs  utils.rs
crates/wallets/src/: wallet_signer.rs
patches/alloy-primitives/: .cargo_vcs_info.json  Cargo.toml
patches/svm-rs-builds/: Cargo.toml
patches/svm-rs-builds/src/: lib.rs
(+106 files in other folders)
